# depth-anything

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
depth_anything/: cli.py  depth_inference.py  gpu_check.py
