[project]
name = "depth-anything"
version = "0.1.0"
description = "Depth estimation using the Depth Anything model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "opencv-python",
    "pillow",
    "click",
    "transformers",
    "python-dotenv",
    "numpy",
    "tqdm>=4.65.0"

]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "pylint",
    "mypy"
]

[project.scripts]
depth-anything = "depth_anything.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3